--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -47,6 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Heading1.cs" />
+    <Compile Include="Heading2.cs" />
+    <Compile Include="Heading3.cs" />
+    <Compile Include="Heading4.cs" />
+    <Compile Include="Heading5.cs" />
+    <Compile Include="Heading6.cs" />
     <Compile Include="NormalStyle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
