--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CaptionStyle.cs" />
     <Compile Include="Heading1.cs" />
     <Compile Include="Heading2.cs" />
     <Compile Include="Heading3.cs" />
