--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -56,6 +56,7 @@
     <Compile Include="NormalStyle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuoteStyle.cs" />
     <Compile Include="Styles.cs" />
   </ItemGroup>
   <ItemGroup>
