List Bullet and List Numbered class
Added two new classes i.e. list Bullet and List Numbered.....

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Heading4.cs" />
     <Compile Include="Heading5.cs" />
     <Compile Include="Heading6.cs" />
+    <Compile Include="ListBulletStyle.cs" />
+    <Compile Include="ListNumberStyle.cs" />
     <Compile Include="NormalStyle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
