ListParagraph Numbered and ListParagraph Bulleted
Completed List Paragraph and List Numbered Class and also Unit tested
these two clasees

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -55,11 +55,15 @@
     <Compile Include="Heading6.cs" />
     <Compile Include="ListBulletStyle.cs" />
     <Compile Include="ListNumberStyle.cs" />
+    <Compile Include="ListParagraph.cs" />
     <Compile Include="NormalStyle.cs" />
+    <Compile Include="NoSpacingStyle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuoteStyle.cs" />
     <Compile Include="Styles.cs" />
+    <Compile Include="SubtitleStyle.cs" />
+    <Compile Include="TitleStyle.cs" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="Microsoft.Office.Core">
