Started title and paragraph test class
Started with Title and paragraph style classes and also added try catch
statements in runinuse methods.

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ListParagraph.cs" />
     <Compile Include="NormalStyle.cs" />
     <Compile Include="NoSpacingStyle.cs" />
+    <Compile Include="ParagraphTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuoteStyle.cs" />
