--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -88,6 +88,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PsychologyTemplate.cs" />
     <Compile Include="QuoteStyle.cs" />
+    <Compile Include="RDFieldTest.cs" />
+    <Compile Include="ShapeTest.cs" />
     <Compile Include="SpacingTest.cs" />
     <Compile Include="Styles.cs" />
     <Compile Include="SubtitleStyle.cs" />
