Capref test cont...
Added two methods for Caption Ref tests

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoUpdateDocStyle.cs" />
+    <Compile Include="CaptionRefTest.cs" />
     <Compile Include="CaptionStyle.cs" />
     <Compile Include="CharacterStyle.cs" />
     <Compile Include="ContinuosSectionBreak.cs" />
