Paragraph test dependencies
Added paragraph dependencies and also made iterate over para method
private

--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -66,6 +66,7 @@
     <Compile Include="CaptionStyle.cs" />
     <Compile Include="CharacterStyle.cs" />
     <Compile Include="ContinuosSectionBreak.cs" />
+    <Compile Include="CrossRefTest.cs" />
     <Compile Include="FooterStyle.cs" />
     <Compile Include="FootNoteStyle.cs" />
     <Compile Include="HeaderStyle.cs" />
