--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -96,6 +96,7 @@
     <Compile Include="ParagraphTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PSY1001.cs" />
     <Compile Include="PsychologyPageBreak.cs" />
     <Compile Include="PsychologyTemplate.cs" />
     <Compile Include="QuoteStyle.cs" />
